[project]
name = "nsync"
version = "0.1.0"
description = "Asynchronous distributed file synchronization tool"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pyzmq>=25.1",
  "pydantic>=2.6",
]

[project.scripts]
nsync-master = "nsync.master:main"
nsync-worker = "nsync.worker:main"

[tool.pytest.ini_options]
addopts = "-q"
